0.211 2023-11-18
  [Incompatible Changes]
    * The return types of the following methods becomes void.
      [IO::Handle]
        sync
  [Prerequirement Changes]
    * Require SPVM::Go 0.005.
0.210 2023-11-18
  [Prerequirement Changes]
    * Require SPVM::Go 0.005.
0.209 2023-11-16
  [Prerequirement Changes]
    * Require SPVM::Sys 0.497.
    * Require SPVM::Go 0.003.
  [New Features]
    * Add $lengtht and $buf_offset argument to the send method in the IO::Socket class.
      
      method send : int ($buffer : string, $flags : int = 0, $to : Sys::Socket::Sockaddr = undef, $length : int = -1, $buf_offset : int = 0);
      
    * Add $buf_offset argument to the recv method in the IO::Socket class.
      
      method recv : int ($buffer : mutable string, $length : int = -1, $flags : int = 0, $buf_offset : int = 0);
      
  [Internal Changes]
    * The the read method in the IO::Socket calls revc method.
    * The the write method in the IO::Socket calls send method.
    * The the sysread method in the IO::Socket calls revc method.
    * The the syswrite method in the IO::Socket calls send method.
  [New Features and Incompatible Changes]
    * The socket of IO::Socket is set to non-blocking mode.
    * IO::Socket supports goroutine of Go.
0.208 2023-09-11
  [Prerequirement Changes]
    * Require SPVM::Sys 0.490.
  [Incompatibe Changes]
    * The following methods are moved from the IO::File class to the IO::Handle class.
      
      method sync : int ();
      method stat : Sys::IO::Stat ();
      method truncate : int ($legnth : long);
    
    * The sync method in the IO::Handle class is changed. If succedd, returns 1.
    
    * The following methods in IO::File class are changed.
    
      -  static method new : IO::File ($file_name : string = undef, $open_mode : string = undef);
      +  static method new : IO::File ($file_name : string = undef, $open_mode : object of string|Int = undef, $perm : int = 0);
      